# common

./: .gitignore  CMakeLists.txt  Notes  README.md  build.sh  build_run.sh  conanfile.txt
src/: CMakeLists.txt  conanfile.txt  lodging.cpp  lodgingRepository.h  lodgingRepositoryJSON.cpp  lodgingRepositoryJSON.h  lodgingRepositoryXML.cpp  lodgingRepositoryXML.h  main.cpp  offer.cpp  offerRepository.h  user.cpp  user.h  userRepository.h
src/businessLogic/: CMakeLists.txt
src/businessLogic/include/businessLogic/: createLodgingUC.h  createOfferUC.h  findLodgingByOfferIDUC.h  findOffersByStartDateUC.h  generateDatas.h  hireOutUC.h  loginUC.h  registerUC.h  session.h
src/businessLogic/src/: createLodgingUC.cpp  createOfferUC.cpp  findLodgingByOfferIDUC.cpp  findOffersByStartDateUC.cpp  generateDatas.cpp  hireOutUC.cpp  loginUC.cpp  registerUC.cpp  session.cpp
src/database/: CMakeLists.txt
src/database/include/database/: lodgingRepository.h  lodgingRepositoryJSON.h  lodgingRepositoryXML.h  offerRepository.h  offerRepositoryJSON.h  offerRepositoryXML.h  repositoryAbstractFact.h  repositoryCreator.h  repositoryJSONFact.h  repositoryTypes.h  repositoryXMLFact.h  userRepositoryJSON.h  userRepositoryXML.h
src/database/src/: lodgingRepositoryJSON.cpp  lodgingRepositoryXML.cpp  offerRepositoryJSON.cpp  offerRepositoryXML.cpp  repositoryCreator.cpp  repositoryJSONFact.cpp  repositoryXMLFact.cpp  userRepositoryJSON.cpp  userRepositoryXML.cpp
src/domain/: CMakeLists.txt
src/domain/include/domain/: cities.h  lodging.h  offer.h
src/domain/src/: lodging.cpp  offer.cpp  user.cpp
src/ui/: CMakeLists.txt
src/ui/include/ui/: consoleUI.h
src/ui/src/: consoleUI.cpp
test/: CMakeLists.txt  lodgingRepositoryJSONTest.cpp
